# BGS

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_access.py  bench_cache_msbfs.py  bench_cache_naive.py  bench_cache_policy.py  bench_dataset.py  bench_dataset_ogb.py  bench_tensor_misc.py  bench_time.py  my_datasets.py  utils.py
draw/: data_arch.drawio
python/bgs/: __init__.py
python/bgs/dataloading/: __init__.py
python/bgs/graph/: __init__.py  naive_graph.py  sparse_graph.py
python/bgs/partition/: train_partition.py  train_partiton.py
tests/: config.ini
tests/python/dataloading/: test_datadoad.py
tests/python/graph/: dataset_test.py
tests/python/partition/: test_train_partiton.py
